# pimage

./: LICENSE  LICENSE-APACHE  LICENSE-MIT  README-PYPI.md  README.md  README_pypi.md  example_01.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: python-app.yml
CopyMoveDetection/: Blocks.py  Container.py  CopyMoveDetection.py  ImageObject.py  main.py  main_CLI.py  main_GUI.py
copy_move_detection/: block.py  container.py  detect.py  image_object.py
copy_move_detection_python_2/: Blocks.py  Container.py  CopyMoveDetection.py  ImageObject.py  main_CLI.py  main_GUI.py
dataset/: readme.md
example/: example.py  requirements.txt
examples/: example_01.py
src/: example.py
src/pimage/: block.py  configuration.py  container.py  copy_move.py  detect.py  image_object.py
src/tests/: test_block.py  test_container.py
