[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pimage_rahmatnazali"
version = "1.0.0"
authors = [
  { name="Rahmat Nazali Salimi", email="rahmatnazali95@gmail.com" },
]
maintainers = [
  { name="Rahmat Nazali Salimi", email="rahmatnazali95@gmail.com" },
]
description = "Library for detecting image copy-move attack"
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[project.urls]
"Homepage" = "https://github.com/rahmatnazali/pimage"
"Bug Tracker" = "https://github.com/rahmatnazali/pimage/issues"
